Make the library compatible with JPMS Set compiler target version to 9